# dsa_miniproject

./: CMakeLists.txt  README.md  doctor.cpp  doctor.h  hospital.cpp  hospital.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  patient.h  patientrecord.cpp  patientrecord.h  queue.cpp  queue.h
